# TranslatEpub

./: .gitignore  LICENSE  README.md  main.py  prompts.py  pyproject.toml
core/: config.py  epub_processor.py  persistence.py  protocols.py  translation_service.py  translator.py  validators.py
models/: translation.py  usage.py
tests/: test_epub_processor.py  test_translation_service.py  test_translator.py  test_validators.py
utils/: epub_utils.py
